--- a/less/whale/buttons.less
+++ b/less/whale/buttons.less
@@ -134,7 +134,7 @@ fieldset:disabled .whale-btn {
 }
 
 caption {
-	color: #373a3c;
+	color: var(--whale-text-color, #252a30);
 	caption-side: top;
 }
 /* Button End */
