--- a/less/whale/dark-mode.less
+++ b/less/whale/dark-mode.less
@@ -3,6 +3,7 @@ body.whale-dark .Whale,
 body.whale-dark.Whale {
 	--whale-surface-color: #1f2023;
 	--whale-surface-muted-color: #25272a;
+	--whale-text-color: #ddd;
 	--whale-content-muted-color: #a9b1b9;
 	--whale-code-background: #17191c;
 	--whale-table-background: #1f2023;
@@ -485,6 +486,7 @@ body.whale-dark.Whale #whale-bottombtn .scroll-button:hover {
 	body.whale-auto-dark.Whale {
 	--whale-surface-color: #1f2023;
 	--whale-surface-muted-color: #25272a;
+	--whale-text-color: #ddd;
 	--whale-content-muted-color: #a9b1b9;
 	--whale-code-background: #17191c;
 	--whale-table-background: #1f2023;
